# game-2048-rust

./: .gitignore  Cargo.toml
.github/workflows/: audit.yml  rust-lint.yml
game-2048-logic/: Cargo.toml
game-2048-logic/src/: lib.rs
game-2048-logic/ui/: main.slint
src/: main.rs
wasm-2048/: Cargo.toml  index.html
wasm-2048/src/: lib.rs
