[package]
name = "game-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-2048-logic = { path = "./game-2048-logic" }

[workspace]
members = [
    "game-2048-logic",
    "wasm-2048",
]

[workspace.dependencies]
wasm-bindgen = { version = "0.2" }